<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutoriaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/nomeAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_tela_sobre"
            android:textSize="25dp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/emailAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_tela_sobre"
            android:textSize="25dp"
            android:textColor="#000"/>



        <TextView
            android:id="@+id/descricaoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_tela_sobre"
            android:textColor="#000"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso_tela_sobre"
            android:textSize="18dp"
            android:textColor="#000"/>

        <ImageView
            android:id="@+id/logoUniversidade"
            android:layout_width="wrap_content"
            android:layout_height="189dp"
            app:srcCompat="@drawable/utfpr_logo" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>